# clouddriver2_magnet_ed2k_offlinedownload

./: .gitignore  CD2ClipboardHelper.spec  CloudDrive2_gRPC_API_Guide_zh-CN.md  README.md  btdig-cd2-dedupe.user.js  cd2_client.py  clipboard_links.py  clouddrive.proto  clouddrive_pb2.py  clouddrive_pb2_grpc.py  gui_app.py  javbus-clouddrive2.user.js  missav-clouddrive2.user.js  pyproject.toml  requirements.txt  root.html  server.py  start.bat  start.ps1  start_gui.bat  start_gui.ps1
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-07-07-gui-bulk-push.md
docs/superpowers/specs/: 2026-07-07-gui-bulk-push-design.md
qml/: Main.qml
tests/: test_cd2_client.py  test_clipboard_links.py  test_gui_app.py  test_release_workflow.py  test_server_compat.py
