[project]
name = "cd2api"
version = "0.1.3"
description = "CloudDrive2 offline download helper API and clipboard GUI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Flask==3.1.1",
    "grpcio==1.73.0",
    "grpcio-tools==1.73.0",
    "protobuf==6.31.1",
    "PySide6>=6.8,<7",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
]
build = [
    "pyinstaller>=6.11",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
package = false
